color-gamut media query returns incorrect results https://bugs.webkit.org/show_bug.cgi?id=160166 <rdar://problem/27537577>

Reviewed by Darin Adler.

While I was unable to reproduce the originator's issue,
we communicated via email and it might have been related
to a customized color space calibration on an external
display.

Anyway, I took this opportunity to update to use the
more appropriate API for detection on macOS Sierra.

Covered by the existing fast/media/mq-color-gamut.html test.

* platform/mac/PlatformScreenMac.mm:
(WebCore::screenSupportsExtendedColor): Use NSScreen canRepresentDisplayGamut.

Canonical link: https://commits.webkit.org/178491@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203903 268f45cc-cd09-0410-ab3c-d52691b4dbfc